--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -6,13 +6,14 @@ dependencies:
     - field.storage.group.field_shortname_or_acronym
   module:
     - group
+    - media
     - node
     - portland
     - user
 id: group_content_menu
-label: 'Group content menu'
+label: 'Group menu for content'
 module: views
-description: ''
+description: 'The group menu shown in the sidebar for Content entities.'
 tag: ''
 base_table: node_field_data
 base_field: nid
@@ -280,9 +281,9 @@ display:
           group_type: group
           admin_label: ''
           label: ''
-          exclude: false
+          exclude: true
           alter:
-            alter_text: true
+            alter_text: false
             text: '<a href="/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ nid }}</span></a>'
             make_link: false
             path: ''
@@ -336,6 +337,190 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: field
+        mid:
+          id: mid
+          table: media_field_data
+          field: mid
+          relationship: gc__media
+          group_type: count_distinct
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          set_precision: false
+          precision: 0
+          decimal: .
+          separator: ', '
+          format_plural: 0
+          format_plural_string: !!binary MQNAY291bnQ=
+          prefix: ''
+          suffix: ''
+          click_sort_column: value
+          type: number_integer
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          field_api_classes: false
+          entity_type: media
+          entity_field: mid
+          plugin_id: field
+        bundle:
+          id: bundle
+          table: media_field_data
+          field: bundle
+          relationship: gc__media
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: portland_plural_label
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: media
+          entity_field: bundle
+          plugin_id: field
+        nothing:
+          id: nothing
+          table: views
+          field: nothing
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: true
+            text: "{% if bundle == \"Documents\" %}\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ bundle|lower }}\" class=\"d-flex justify-content-between align-items-center\">{{ bundle }}<span class=\"badge badge-primary badge-pill\">{{ mid }}</span></a>\n{% else %}\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}\" class=\"d-flex justify-content-between align-items-center\">{{ type }}<span class=\"badge badge-primary badge-pill\">{{ nid }}</span></a>\n{% endif %}"
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: false
+          plugin_id: custom
       filters:
         status:
           id: status
@@ -373,6 +558,44 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           entity_type: node
+          entity_field: status
+          plugin_id: boolean
+        status_1:
+          id: status_1
+          table: media_field_data
+          field: status
+          relationship: gc__media
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: media
           entity_field: status
           plugin_id: boolean
       sorts: {  }
@@ -443,7 +666,7 @@ display:
           relationship: group_content_id
           group_type: group
           admin_label: 'Content from all group content'
-          required: true
+          required: false
           group_content_plugins:
             'group_node:alert': '0'
             'group_node:building': '0'
@@ -454,6 +677,20 @@ display:
             'group_node:news': '0'
             'group_node:notification': '0'
             'group_node:service_location': '0'
+          entity_type: group_content
+          plugin_id: group_content_to_entity
+        gc__media:
+          id: gc__media
+          table: group_content_field_data
+          field: gc__media
+          relationship: group_content_id
+          group_type: group
+          admin_label: 'Group content Media'
+          required: false
+          group_content_plugins:
+            'group_media:document': 'group_media:document'
+            'group_media:image': '0'
+            'group_media:video': '0'
           entity_type: group_content
           plugin_id: group_content_to_entity
       arguments:
@@ -498,7 +735,7 @@ display:
       filter_groups:
         operator: AND
         groups:
-          1: AND
+          1: OR
     cache_metadata:
       max-age: -1
       contexts:
