--- a/web/sites/default/config/views.view.group_menu_for_media.yml
+++ b/web/sites/default/config/views.view.group_menu_for_media.yml
@@ -13,7 +13,7 @@ dependencies:
 id: group_menu_for_media
 label: 'Group menu for media'
 module: views
-description: ''
+description: 'The group menu shown in the sidebar for Media entities.'
 tag: ''
 base_table: media_field_data
 base_field: mid
@@ -260,6 +260,143 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        mid:
+          id: mid
+          table: media_field_data
+          field: mid
+          relationship: gc__media
+          group_type: count_distinct
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: number_integer
+          settings:
+            thousand_separator: ''
+            prefix_suffix: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          set_precision: false
+          precision: 0
+          decimal: .
+          format_plural: 0
+          format_plural_string: !!binary MQNAY291bnQ=
+          prefix: ''
+          suffix: ''
+          entity_type: media
+          entity_field: mid
+          plugin_id: field
+        bundle:
+          id: bundle
+          table: media_field_data
+          field: bundle
+          relationship: gc__media
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: portland_plural_label
+          settings: {  }
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: media
+          entity_field: bundle
+          plugin_id: field
         nothing:
           id: nothing
           table: views
@@ -271,7 +408,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ nid }}</span></a>'
+            text: "{% if bundle == \"Documents\" %}\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ bundle|lower }}\" class=\"d-flex justify-content-between align-items-center\">{{ bundle }}<span class=\"badge badge-primary badge-pill\">{{ mid }}</span></a>\n{% else %}\n<a href=\"/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}\" class=\"d-flex justify-content-between align-items-center\">{{ type }}<span class=\"badge badge-primary badge-pill\">{{ nid }}</span></a>\n{% endif %}"
             make_link: false
             path: ''
             absolute: false
@@ -346,6 +483,44 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           entity_type: node
+          entity_field: status
+          plugin_id: boolean
+        status:
+          id: status
+          table: media_field_data
+          field: status
+          relationship: gc__media
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: media
           entity_field: status
           plugin_id: boolean
       sorts: {  }
@@ -432,7 +607,7 @@ display:
           admin_label: 'Group content Media'
           required: false
           group_content_plugins:
-            'group_media:document': '0'
+            'group_media:document': 'group_media:document'
             'group_media:image': '0'
             'group_media:video': '0'
           entity_type: group_content
@@ -480,7 +655,7 @@ display:
       filter_groups:
         operator: AND
         groups:
-          1: AND
+          1: OR
       group_by: true
     cache_metadata:
       max-age: -1
