POWR-265 adding quote paragraph type and basic theme updates to allow for alignment.

--- a/web/sites/default/config/field.field.node.guide.field_body.yml
+++ b/web/sites/default/config/field.field.node.guide.field_body.yml
@@ -12,6 +12,7 @@ dependencies:
     - paragraphs.paragraphs_type.form_app_button
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.location
+    - paragraphs.paragraphs_type.quote
     - paragraphs.paragraphs_type.simple_text
     - paragraphs.paragraphs_type.telephone_button
     - paragraphs.paragraphs_type.video
@@ -45,6 +46,7 @@ settings:
       fax_button: fax_button
       location: location
       document: document
+      quote: quote
       image: image
       video: video
     target_bundles_drag_drop:
@@ -78,10 +80,25 @@ settings:
       document:
         enabled: true
         weight: 12
+      quote:
+        enabled: true
+        weight: 18
       image:
         enabled: true
         weight: 18
+      address:
+        weight: 19
+        enabled: false
+      building:
+        weight: 20
+        enabled: false
       video:
         enabled: true
         weight: 24
+      group_contact_information:
+        weight: 26
+        enabled: false
+      service_location:
+        weight: 29
+        enabled: false
 field_type: entity_reference_revisions
