--- a/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
+++ b/web/sites/default/config/field.field.paragraph.columns_equal.field_column.yml
@@ -8,6 +8,7 @@ dependencies:
     - paragraphs.paragraphs_type.document
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.location
+    - paragraphs.paragraphs_type.quote
     - paragraphs.paragraphs_type.simple_text
     - paragraphs.paragraphs_type.video
   module:
@@ -35,6 +36,7 @@ settings:
       document: document
       location: location
       simple_text: simple_text
+      quote: quote
       image: image
       video: video
     target_bundles_drag_drop:
@@ -65,13 +67,28 @@ settings:
       simple_text:
         enabled: true
         weight: 17
+      quote:
+        enabled: true
+        weight: 18
       image:
         enabled: true
         weight: 18
       telephone_button:
         weight: 18
         enabled: false
+      address:
+        weight: 19
+        enabled: false
+      building:
+        weight: 20
+        enabled: false
       video:
         enabled: true
         weight: 24
+      group_contact_information:
+        weight: 26
+        enabled: false
+      service_location:
+        weight: 29
+        enabled: false
 field_type: entity_reference_revisions
