POWR-265 add quote to additional content types.

--- a/web/sites/default/config/field.field.node.event.field_body.yml
+++ b/web/sites/default/config/field.field.node.event.field_body.yml
@@ -5,7 +5,12 @@ dependencies:
   config:
     - field.storage.node.field_body
     - node.type.event
+    - paragraphs.paragraphs_type.columns_equal
+    - paragraphs.paragraphs_type.document
+    - paragraphs.paragraphs_type.image
+    - paragraphs.paragraphs_type.quote
     - paragraphs.paragraphs_type.simple_text
+    - paragraphs.paragraphs_type.video
   module:
     - custom_add_another
     - entity_reference_revisions
@@ -29,29 +34,61 @@ settings:
     negate: 0
     target_bundles:
       simple_text: simple_text
+      columns_equal: columns_equal
+      quote: quote
+      document: document
+      image: image
+      video: video
     target_bundles_drag_drop:
-      email_button:
-        weight: 9
-        enabled: false
-      fax_button:
-        weight: 10
-        enabled: false
-      form_app_button:
-        weight: 11
-        enabled: false
-      location:
-        weight: 12
-        enabled: false
-      service_mode:
-        weight: 13
-        enabled: false
-      service_step:
-        weight: 14
-        enabled: false
       simple_text:
         enabled: true
-        weight: 15
+        weight: -35
+      columns_equal:
+        enabled: true
+        weight: -34
+      quote:
+        enabled: true
+        weight: -33
+      document:
+        enabled: true
+        weight: -32
+      image:
+        enabled: true
+        weight: -31
+      video:
+        enabled: true
+        weight: -30
+      email_button:
+        weight: -29
+        enabled: false
+      fax_button:
+        weight: -28
+        enabled: false
+      form_app_button:
+        weight: -27
+        enabled: false
+      location:
+        weight: -26
+        enabled: false
+      service_mode:
+        weight: -25
+        enabled: false
+      service_step:
+        weight: -24
+        enabled: false
       telephone_button:
-        weight: 16
+        weight: -23
+        enabled: false
+      address:
+        weight: -22
+        enabled: false
+      building:
+        weight: -21
+        enabled: false
+      group_contact_information:
+        weight: -20
+        enabled: false
+      service_location:
+        weight: -19
         enabled: false
 field_type: entity_reference_revisions
