--- a/web/sites/default/config/field.field.node.event.field_event_location.yml
+++ b/web/sites/default/config/field.field.node.event.field_event_location.yml
@@ -5,8 +5,9 @@ dependencies:
   config:
     - field.storage.node.field_event_location
     - node.type.event
-    - paragraphs.paragraphs_type.location
-    - paragraphs.paragraphs_type.simple_text
+    - paragraphs.paragraphs_type.address
+    - paragraphs.paragraphs_type.building
+    - paragraphs.paragraphs_type.service_location
   module:
     - custom_add_another
     - entity_reference_revisions
@@ -29,31 +30,59 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
-      location: location
-      simple_text: simple_text
+      service_location: service_location
+      building: building
+      address: address
     target_bundles_drag_drop:
+      service_location:
+        enabled: true
+        weight: -35
+      building:
+        enabled: true
+        weight: -34
+      address:
+        enabled: true
+        weight: -33
       email_button:
-        weight: 9
+        weight: -32
         enabled: false
       fax_button:
-        weight: 10
+        weight: -31
         enabled: false
       form_app_button:
-        weight: 11
+        weight: -30
         enabled: false
       location:
-        enabled: true
-        weight: 12
+        weight: -29
+        enabled: false
       service_mode:
-        weight: 13
+        weight: -28
         enabled: false
       service_step:
-        weight: 14
+        weight: -27
         enabled: false
       simple_text:
-        enabled: true
-        weight: 15
+        weight: -26
+        enabled: false
       telephone_button:
-        weight: 16
+        weight: -25
+        enabled: false
+      columns_equal:
+        weight: -24
+        enabled: false
+      document:
+        weight: -23
+        enabled: false
+      group_contact_information:
+        weight: -22
+        enabled: false
+      image:
+        weight: -21
+        enabled: false
+      quote:
+        weight: -20
+        enabled: false
+      video:
+        weight: -19
         enabled: false
 field_type: entity_reference_revisions
