--- a/web/sites/default/config/field.field.node.news.field_body.yml
+++ b/web/sites/default/config/field.field.node.news.field_body.yml
@@ -6,12 +6,12 @@ dependencies:
     - field.storage.node.field_body
     - node.type.news
     - paragraphs.paragraphs_type.columns_equal
-    - paragraphs.paragraphs_type.email_button
-    - paragraphs.paragraphs_type.fax_button
-    - paragraphs.paragraphs_type.form_app_button
+    - paragraphs.paragraphs_type.document
+    - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.location
+    - paragraphs.paragraphs_type.quote
     - paragraphs.paragraphs_type.simple_text
-    - paragraphs.paragraphs_type.telephone_button
+    - paragraphs.paragraphs_type.video
   module:
     - custom_add_another
     - entity_reference_revisions
@@ -36,37 +36,61 @@ settings:
     target_bundles:
       simple_text: simple_text
       columns_equal: columns_equal
-      form_app_button: form_app_button
-      email_button: email_button
-      telephone_button: telephone_button
-      fax_button: fax_button
+      quote: quote
       location: location
+      document: document
+      image: image
+      video: video
     target_bundles_drag_drop:
       simple_text:
         enabled: true
-        weight: -19
+        weight: -35
       columns_equal:
         enabled: true
-        weight: -18
-      form_app_button:
+        weight: -34
+      quote:
         enabled: true
-        weight: -17
-      email_button:
-        enabled: true
-        weight: -16
-      telephone_button:
-        enabled: true
-        weight: -15
-      fax_button:
-        enabled: true
-        weight: -14
+        weight: -33
       location:
         enabled: true
-        weight: -13
+        weight: -32
+      document:
+        enabled: true
+        weight: -31
+      image:
+        enabled: true
+        weight: -30
+      video:
+        enabled: true
+        weight: -29
+      form_app_button:
+        weight: -28
+        enabled: false
+      email_button:
+        weight: -27
+        enabled: false
+      telephone_button:
+        weight: -26
+        enabled: false
+      fax_button:
+        weight: -25
+        enabled: false
       service_mode:
-        weight: -12
+        weight: -24
         enabled: false
       service_step:
-        weight: -11
+        weight: -23
+        enabled: false
+      address:
+        weight: -22
+        enabled: false
+      building:
+        weight: -21
+        enabled: false
+      group_contact_information:
+        weight: -20
+        enabled: false
+      service_location:
+        weight: -19
         enabled: false
 field_type: entity_reference_revisions
