--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,14 +141,14 @@ behat_tests: &behat_tests
             if grep -Fxq "$CIRCLE_BRANCH" ./env_list.txt;  then
               rm -rf ./env_list.txt
               # Get the tree from Pantheon. Rebase the CircleCI local repo on top of Pantheon. Push the new branch to Pantheon.
-              git fetch pantheon $CIRCLE_BRANCH
-              git rebase -X theirs -X no-renames pantheon/$CIRCLE_BRANCH
-              git push pantheon $CIRCLE_BRANCH
+              # git fetch pantheon $CIRCLE_BRANCH
+              # git rebase -X theirs -X no-renames pantheon/$CIRCLE_BRANCH
+              # git push pantheon $CIRCLE_BRANCH
               # Pantheon appears to need a short delay. Otherwise some files are not picked up by drush cim.
-              sleep 20s
-              # This is the old script left as a fallback solution. It wipes out the Pantheon tree.
-              # git push -f pantheon $CIRCLE_BRANCH
-              # terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 30s
+              # sleep 20s
+              # This version wipes out the Pantheon tree.
+              git push -f pantheon $CIRCLE_BRANCH
+              terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 30s
             else
               rm -rf ./env_list.txt
               git push -f pantheon $CIRCLE_BRANCH
