--- a/composer.json
+++ b/composer.json
@@ -123,7 +123,10 @@
         "patches": {
           "drupal/core": {
               "Telephone Link field formatter breaks Drupal with 5 digits or less in the number": "https://www.drupal.org/files/issues/2484693-47.patch",
-              "Database::startLog() cause a notice in Shortcut::sort()": "https://www.drupal.org/files/issues/2567035-surpress-uasort-contents-modified-errors-20.patch"          },
+              "Database::startLog() cause a notice in Shortcut::sort()": "https://www.drupal.org/files/issues/2567035-surpress-uasort-contents-modified-errors-20.patch",
+              "1349080 - node_access filters out accessible nodes when node is left joined.":
+                "https://www.drupal.org/files/issues/1349080-397-D8.patch"
+            },
           "drupal/ctools": {
               "Views exposed filters missing autosubmit option https://www.drupal.org/node/2475595": "https://www.drupal.org/files/issues/2475595-ctools-autocomplete-fix-24.patch"
           },
