--- a/web/sites/default/config/openid_connect.settings.yml
+++ b/web/sites/default/config/openid_connect.settings.yml
@@ -1,6 +1,6 @@
 always_save_userinfo: true
 connect_existing_users: true
-override_registration_settings: false
+override_registration_settings: true
 userinfo_mappings:
   timezone: zoneinfo
   metatag: 0
