--- a/web/sites/default/config/openid_connect.settings.azure.yml
+++ b/web/sites/default/config/openid_connect.settings.azure.yml
@@ -1,8 +1,6 @@
-enabled: azure
+enabled: true
 settings:
   redirect_url: ''
-  client_id: null
-  client_secret: null
   authorization_endpoint: 'https://login.microsoftonline.com/common/oauth2/authorize'
   token_endpoint: 'https://login.microsoftonline.com/common/oauth2/token'
   userinfo_endpoint: 'https://graph.windows.net/me?api-version=1.6'
