POWR-330 Add and configure ClamAV module to scan file uploads

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "drupal/bootstrap_barrio": "^4.15",
         "drupal/bootstrap_library": "^1.11",
         "drupal/chosen": "^2.5",
+        "drupal/clamav": "^1.0",
         "drupal/components": "^1.0",
         "drupal/conditional_fields": "^1.0@alpha",
         "drupal/console": "^1.0.2",
