POWR-263 update homepage views and styles

--- a/web/sites/default/config/views.view.community_actions.yml
+++ b/web/sites/default/config/views.view.community_actions.yml
@@ -131,7 +131,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: ' fas fa-{{ field_fontawesome_icon }}'
+            text: '<i class="fas fa-{{ field_fontawesome_icon }} fa-fw mr-3"></i>'
             make_link: false
             path: ''
             absolute: false
@@ -194,7 +194,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<span class="community-action"><a href="{{ view_taxonomy_term }}" class="list-group-item list-group-item-action{{ field_fontawesome_icon }}">{{ name }}</a></span>'
+            text: '<span class="community-action"><a href="{{ view_taxonomy_term }}" class="list-group-item list-group-item-action align-middle">{{ field_fontawesome_icon }} {{ name }}</a></span>'
             make_link: false
             path: ''
             absolute: false
