--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -137,7 +137,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: ' class="fas fa-{{ field_fontawesome_icon }}"'
+            text: '<i class="fas fa-{{ field_fontawesome_icon }} fa-fw"></i>'
             make_link: false
             path: ''
             absolute: false
@@ -200,7 +200,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<h3><a href="{{ view_taxonomy_term }}"{{ field_fontawesome_icon }}>{{ name }}</a></h3>'
+            text: '<h3><a href="{{ view_taxonomy_term }}">{{ field_fontawesome_icon }} {{ name }}</a></h3>'
             make_link: false
             path: ''
             absolute: false
