POWR-263 configure extlink and add css for FA psuedos.

--- a/web/themes/custom/cloudy/cloudy.info.yml
+++ b/web/themes/custom/cloudy/cloudy.info.yml
@@ -10,6 +10,8 @@ libraries:
 libraries-override:
   bootstrap_barrio/global-styling: false
   bootstrap_barrio/file: false
+stylesheets-remove:
+  - '@extlink/extlink.css'
 regions:
   top_header: 'Top Header'
   top_header_form: "Top Header Form"
