--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/ds": "^3.1",
         "drupal/eva": "^1.3",
+        "drupal/extlink": "^1.1",
         "drupal/facets": "^1.0",
         "drupal/field_group": "^1.0",
         "drupal/group": "^1.0",
