--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.teaser.yml
@@ -27,8 +27,42 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - 'bundle_field:group'
         - label
         - field_summary
+    fields:
+      'bundle_field:group':
+        plugin_id: 'bundle_field:group'
+        weight: 0
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow: true
+            ow-el: ''
+            ow-cl: 'text-muted align-right'
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
 id: group.bureau_office.teaser
 targetEntityType: group
 bundle: bureau_office
@@ -36,7 +70,7 @@ mode: teaser
 content:
   field_summary:
     type: string
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings:
@@ -45,11 +79,39 @@ content:
   label:
     label: hidden
     type: string
-    weight: 0
+    weight: 1
     region: content
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
+      link_to_entity: true
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow: true
+            ow-el: h2
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
 hidden:
   changed: true
   created: true
