--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.storage.node.field_summary_and_lead_paragraph
     - search_api.server.pantheon
   module:
+    - search_api_solr
     - search_api
     - group
     - node
@@ -86,12 +87,26 @@ field_settings:
     label: Title
     datasource_id: 'entity:group'
     property_path: label
-    type: string
+    type: solr_text_ngram
+    boost: !!float 21
+  label_1:
+    label: Title
+    datasource_id: 'entity:group'
+    property_path: label
+    type: solr_text_phonetic
+    boost: !!float 13
   name:
     label: Name
     datasource_id: 'entity:taxonomy_term'
     property_path: name
-    type: string
+    type: solr_text_ngram
+    boost: !!float 21
+  name_1:
+    label: Name
+    datasource_id: 'entity:taxonomy_term'
+    property_path: name
+    type: solr_text_phonetic
+    boost: !!float 13
   rendered_item:
     label: 'Rendered HTML output'
     property_path: rendered_item
@@ -123,7 +138,14 @@ field_settings:
     label: Title
     datasource_id: 'entity:node'
     property_path: title
-    type: string
+    type: solr_text_ngram
+    boost: !!float 21
+  title_1:
+    label: Title
+    datasource_id: 'entity:node'
+    property_path: title
+    type: solr_text_phonetic
+    boost: !!float 13
   type:
     label: 'Group type'
     datasource_id: 'entity:group'
@@ -236,10 +258,10 @@ processor_settings:
   type_boost:
     boosts:
       'entity:group':
-        datasource_boost: !!float 1
+        datasource_boost: !!float 8
         bundle_boosts:
-          bureau_office: !!float 1
-          elected_official: !!float 1
+          bureau_office: !!float 8
+          elected_official: !!float 8
           program: !!float 8
           project: !!float 8
       'entity:node':
@@ -247,19 +269,19 @@ processor_settings:
         bundle_boosts:
           alert: !!float 0
           building: !!float 0
-          city_service: !!float 21
+          city_service: !!float 8
           event: !!float 1
-          guide: !!float 13
+          guide: !!float 8
           information: !!float 0
           news: !!float 1
           notification: !!float 0
           service_location: !!float 1
       'entity:taxonomy_term':
-        datasource_boost: !!float 1
+        datasource_boost: !!float 3
         bundle_boosts:
           audience: !!float 1
           community_actions: !!float 1
-          topics: !!float 1
+          topics: !!float 8
     weights:
       preprocess_index: 0
 tracker_settings:
