--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -15,10 +15,10 @@ searched_fields:
   rendered_item: rendered_item
 style: view_modes
 view_mode_configuration:
-  'entity:group_bureau_office': default
-  'entity:group_elected_official': default
-  'entity:group_program': default
-  'entity:group_project': default
+  'entity:group_bureau_office': teaser
+  'entity:group_elected_official': teaser
+  'entity:group_program': teaser
+  'entity:group_project': teaser
   'entity:node_alert': teaser
   'entity:node_building': teaser
   'entity:node_city_service': teaser
