POWR-263 reconfigure to open external links in same tab

--- a/web/sites/default/config/extlink.settings.yml
+++ b/web/sites/default/config/extlink.settings.yml
@@ -1,5 +1,5 @@
-extlink_target: true
-extlink_target_no_override: true
+extlink_target: false
+extlink_target_no_override: false
 extlink_nofollow: false
 extlink_follow_no_override: false
 extlink_subdomains: true
