POWR-263 updates to media types, paragraph, views for FA icons

--- a/web/sites/default/config/views.view.media_entity.yml
+++ b/web/sites/default/config/views.view.media_entity.yml
@@ -588,7 +588,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "{% if extension == 'pdf' %}\n<span class=\"fas fa-file-pdf-o\">{{ filename }}</span> ({{ filesize }})\n{% elseif extension == 'doc' or extension == 'docx' %}\n<span class=\"fas fa-file-word-o\">{{ filename }}</span> ({{ filesize }})\n{% elseif extension == 'xls' or extension == 'xlsx' %}\n<span class=\"fas fa-file-excel-o\">{{ filename }}</span> ({{ filesize }})\n{% elseif extension == 'ppt' or extension == 'pptx' %}\n<span class=\"fas fa-file-powerpoint-o\">{{ filename }}</span> ({{ filesize }})\n{% else %}\n<span class=\"fas fa-file-o\"></span> {{ filename }} ({{ filesize }})\n{% endif %}\n"
+            text: "{% if extension == 'pdf' %}\n<i class=\"fas fa-file-pdf\"></i> {{ filename }} ({{ filesize }})\n{% elseif extension == 'doc' or extension == 'docx' %}\n<i class=\"fas fa-file-word-o\"></i> {{ filename }} ({{ filesize }})\n{% elseif extension == 'xls' or extension == 'xlsx' %}\n<i class=\"fas fa-file-excel-o\"></i> {{ filename }} ({{ filesize }})\n{% elseif extension == 'ppt' or extension == 'pptx' %}\n<i class=\"fas fa-file-powerpoint-o\"></i> {{ filename }} ({{ filesize }})\n{% else %}\n<i class=\"fas fa-file-o\"></i> {{ filename }} ({{ filesize }})\n{% endif %}\n"
             make_link: false
             path: ''
             absolute: false
