POWR-301 Added cronpub module

--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.information.field_body
+    - field.field.node.information.field_cronpub_date
     - node.type.information
   module:
     - content_moderation
+    - cronpub
     - paragraphs
     - path
 id: node.information.default
@@ -37,6 +39,13 @@ content:
         collapse_edit_all: collapse_edit_all
         add_above: add_above
     third_party_settings: {  }
+    region: content
+  field_cronpub_date:
+    weight: 26
+    settings:
+      rrule_option: 1
+    third_party_settings: {  }
+    type: cronpub_rrule_js_widget
     region: content
   moderation_state:
     type: moderation_state_default
