--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - field.field.node.information.field_body
+    - field.field.node.information.field_cronpub_date
     - node.type.information
   module:
+    - cronpub
     - entity_reference_revisions
     - panelizer
     - user
@@ -33,6 +35,18 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    region: content
+  field_cronpub_date:
+    weight: 2
+    label: above
+    settings:
+      title: 'Next actions'
+      string_formatter: '%action on %date.'
+      date_formatter: fallback
+      limit: 1
+      filter: all
+    third_party_settings: {  }
+    type: cronpub_default
     region: content
 hidden:
   links: true
