--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "drupal/console": "^1.0.2",
         "drupal/copyright_block": "^1.0@RC",
         "drupal/core": "~8.5",
+        "drupal/cronpub": "^1.0@alpha",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/ds": "^3.1",
         "drupal/eva": "^1.3",
