--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.search_result.yml
@@ -1,16 +1,15 @@
-uuid: 3210e96d-9d2a-4cd9-a650-c14b5c56a0e4
+uuid: 5109a025-e48d-44b3-a143-b327bcd2cfa2
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
-    - field.field.node.building.field_address
-    - node.type.building
+    - core.entity_view_mode.taxonomy_term.search_result
+    - field.field.taxonomy_term.audience.field_fontawesome_icon
+    - taxonomy.vocabulary.audience
   module:
-    - address
     - ds
     - panelizer
-    - user
+    - text
 third_party_settings:
   panelizer:
     enable: false
@@ -26,27 +25,12 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - 'bundle_field:node'
-        - node_title
-        - field_address
+        - 'bundle_field:taxonomy_term'
+        - taxonomy_term_title
+        - description
     fields:
-      node_title:
-        plugin_id: node_title
-        weight: 1
-        label: hidden
-        formatter: default
-        settings:
-          link: true
-          wrapper: h2
-          class: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-      'bundle_field:node':
-        plugin_id: 'bundle_field:node'
+      'bundle_field:taxonomy_term':
+        plugin_id: 'bundle_field:taxonomy_term'
         weight: 0
         label: hidden
         formatter: default
@@ -77,19 +61,32 @@ third_party_settings:
             fis-def-at: false
             fi: false
             fi-def-at: false
-id: node.building.teaser
-targetEntityType: node
-bundle: building
-mode: teaser
+      taxonomy_term_title:
+        plugin_id: taxonomy_term_title
+        weight: 1
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h2
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+id: taxonomy_term.audience.search_result
+targetEntityType: taxonomy_term
+bundle: audience
+mode: search_result
 content:
-  field_address:
-    type: address_default
+  description:
+    label: hidden
+    type: text_default
     weight: 2
     region: content
-    label: hidden
     settings: {  }
     third_party_settings: {  }
 hidden:
-  content_moderation_control: true
-  links: true
-  scheduled_publication: true
+  field_fontawesome_icon: true
