--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -12,7 +12,14 @@ show_all_when_no_keys: false
 index: full_index
 limit: 25
 searched_fields:
+  description: description
+  label: label
+  label_1: label_1
+  name: name
+  name_1: name_1
   rendered_item: rendered_item
+  title: title
+  title_1: title_1
 style: view_modes
 view_mode_configuration:
   'entity:group_bureau_office': teaser
@@ -28,7 +35,7 @@ view_mode_configuration:
   'entity:node_news': teaser
   'entity:node_notification': teaser
   'entity:node_service_location': teaser
-  'entity:taxonomy_term_audience': default
-  'entity:taxonomy_term_community_actions': default
-  'entity:taxonomy_term_topics': default
+  'entity:taxonomy_term_audience': search_result
+  'entity:taxonomy_term_community_actions': search_result
+  'entity:taxonomy_term_topics': search_result
 show_search_form: true
