--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.full.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.full.yml
@@ -1,8 +1,9 @@
-uuid: d80b8845-ab45-4f2f-9b9b-d285c4d5ee21
+uuid: 6f70c7c0-fc0c-45b8-9ebc-6e3b160559b8
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.taxonomy_term.full
     - field.field.taxonomy_term.audience.field_fontawesome_icon
     - taxonomy.vocabulary.audience
   module:
@@ -14,10 +15,10 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: taxonomy_term.audience.default
+id: taxonomy_term.audience.full
 targetEntityType: taxonomy_term
 bundle: audience
-mode: default
+mode: full
 content:
   description:
     label: hidden
