--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -3,19 +3,19 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_body
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
     - field.storage.group.field_shortname_or_acronym
     - field.storage.group.field_summary
-    - field.storage.node.field_body
     - field.storage.node.field_summary
     - field.storage.node.field_summary_and_lead_paragraph
     - search_api.server.pantheon
   module:
     - search_api_solr
     - search_api
-    - group
     - node
+    - group
     - taxonomy
 id: full_index
 name: 'Full index'
@@ -107,6 +107,11 @@ field_settings:
     property_path: name
     type: solr_text_phonetic
     boost: !!float 13
+  name_2:
+    label: Name
+    datasource_id: 'entity:taxonomy_term'
+    property_path: name
+    type: string
   rendered_item:
     label: 'Rendered HTML output'
     property_path: rendered_item
@@ -178,9 +183,11 @@ datasource_settings:
       selected: {  }
   'entity:taxonomy_term':
     bundles:
-      default: true
+      default: false
       selected:
-        - city_service_modes
+        - audience
+        - community_actions
+        - topics
     languages:
       default: true
       selected: {  }
@@ -190,10 +197,16 @@ processor_settings:
   entity_status: {  }
   rendered_item: {  }
   stemmer:
-    all_fields: false
+    all_fields: true
     fields:
       - description
+      - label
+      - label_1
+      - name
+      - name_1
       - rendered_item
+      - title
+      - title_1
     exceptions:
       mexican: mexic
       texan: texa
@@ -201,10 +214,16 @@ processor_settings:
       preprocess_index: 0
       preprocess_query: 0
   stopwords:
-    all_fields: false
+    all_fields: true
     fields:
       - description
+      - label
+      - label_1
+      - name
+      - name_1
       - rendered_item
+      - title
+      - title_1
     stopwords:
       - a
       - an
@@ -245,10 +264,16 @@ processor_settings:
       preprocess_index: -5
       preprocess_query: -2
   tokenizer:
-    all_fields: false
+    all_fields: true
     fields:
       - description
+      - label
+      - label_1
+      - name
+      - name_1
       - rendered_item
+      - title
+      - title_1
     spaces: ''
     overlap_cjk: 1
     minimum_word_size: '3'
