--- a/web/sites/default/config/taxonomy.vocabulary.community_actions.yml
+++ b/web/sites/default/config/taxonomy.vocabulary.community_actions.yml
@@ -2,7 +2,7 @@ uuid: b5cdd446-64b7-4e10-bbb5-90d80e84aab8
 langcode: en
 status: true
 dependencies: {  }
-name: 'Community actions'
+name: Action
 vid: community_actions
 description: 'Community actions help us classify how the community will interact with services.'
 hierarchy: 0
