--- a/web/sites/default/config/taxonomy.vocabulary.topics.yml
+++ b/web/sites/default/config/taxonomy.vocabulary.topics.yml
@@ -2,8 +2,8 @@ uuid: a369097c-94e7-4bef-8b43-9628df0c0b55
 langcode: en
 status: true
 dependencies: {  }
-name: Topics
+name: Topic
 vid: topics
 description: 'Topics appear on the homepage and special navigation pages to help the community find services, guides, and programs.'
-hierarchy: 1
+hierarchy: 0
 weight: 0
