POWR-248 Enable local Solr

--- a/.lando.yml
+++ b/.lando.yml
@@ -14,6 +14,16 @@ services:
     xdebug: true
     config:
       conf: xdebug.ini
+  index:
+    portforward: true
+    run_as_root:
+      - "cp -f /app/sites#self#environments#lando.xml /etc/tomcat7/Catalina/localhost/"
+  solr6:
+    type: solr:6.6
+    portforward: true
+    core: index
+    config:
+      conf: web/modules/contrib/search_api_solr/solr-conf/6.x
 drush: composer
 tooling:
   drush:
