--- a/composer.json
+++ b/composer.json
@@ -138,6 +138,9 @@
             ,
             "drupal/clamav": {
                 "2915237 - allowUncheckedFiles() not working as expected": "https://www.drupal.org/files/issues/2915237-2.patch"
+            },
+            "drupal/search_api_pantheon": {
+                "2996001 - Use Lando client cert": "https://www.drupal.org/files/issues/2018-08-29/use_lando_cert.patch"
             }
         },
         "merge-plugin": {
