POWR-122 initial commit: added new portland_legacy_redirects module, added legacy_redirects field to information content type

--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.information.field_body
+    - field.field.node.information.field_legacy_path
     - node.type.information
   module:
     - entity_reference_revisions
@@ -35,5 +36,6 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_legacy_path: true
   links: true
   scheduled_publication: true
