--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -143,3 +143,4 @@ search_api_solr: 0.0.0
 search_api_pantheon: 1.0.0-alpha3
 comment: 8.5.6
 search_api_page: 1.0.0-alpha12
+portland_legacy_redirects: 0.1.0
