--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -64,7 +64,8 @@ menu_ui: 0.0.0
 metatag: 0.0.0
 node: 0.0.0
 openapi: 0.0.0
-openapi_redoc: 0.0.0
+openapi_ui: 0.0.0
+openapi_ui_redoc: 0.0.0
 options: 0.0.0
 page_cache: 0.0.0
 panelizer: 0.0.0
