--- a/web/sites/default/config/sync/core.extension.yml
+++ b/web/sites/default/config/sync/core.extension.yml
@@ -63,7 +63,8 @@ module:
   metatag: 0
   node: 0
   openapi: 0
-  openapi_redoc: 0
+  openapi_ui: 0
+  openapi_ui_redoc: 0
   options: 0
   page_cache: 0
   panelizer: 0
