--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -87,6 +87,7 @@ module:
   node: 0
   openapi: 0
   openapi_ui: 0
+  openapi_ui_swagger: 0
   openapi_ui_redoc: 0
   openid_connect: 0
   options: 0
