POWR-301 Added top search content type and related views

--- a/web/sites/default/config/views.view.top_searches.yml
+++ b/web/sites/default/config/views.view.top_searches.yml
@@ -84,7 +84,7 @@ display:
             trim_whitespace: false
             alt: ''
             rel: ''
-            link_class: 'badge badge-secondary'
+            link_class: ''
             prefix: ''
             suffix: ''
             target: ''
@@ -420,6 +420,7 @@ display:
           id: area_text_custom
           table: views
           field: area_text_custom
+          empty: false
           plugin_id: text_custom
       arguments: {  }
       relationships:
