--- a/web/sites/default/config/views.view.top_search_content.yml
+++ b/web/sites/default/config/views.view.top_search_content.yml
@@ -25,10 +25,9 @@ display:
   default:
     display_options:
       access:
-        type: role
+        type: perm
         options:
-          role:
-            administrator: administrator
+          perm: 'access content overview'
       cache:
         type: tag
       query:
@@ -509,7 +508,7 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-        - user.roles
+        - user.permissions
       max-age: -1
       tags:
         - 'config:field.storage.node.field_active_time_frame'
@@ -543,7 +542,7 @@ display:
         - url
         - url.query_args
         - 'user.node_grants:view'
-        - user.roles
+        - user.permissions
       max-age: -1
       tags:
         - 'config:field.storage.node.field_active_time_frame'
